# paint

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  Layer.cpp  test.cpp
src/.cache/clangd/index/: test.cpp.6789E848DA59406F.idx
src/include/: Layer.hpp  Slate.hpp
